Update ubuntu_nexus.sh